# util

./: .gitignore  CMakeLists.txt  README  ReleaseNotes  thekogans_make.xml
doc/: Doxyfile
examples/genguid/: thekogans_make.xml
examples/genguid/src/: main.cpp
examples/hash/: thekogans_make.xml
examples/hash/src/: main.cpp
examples/kcd/: thekogans_make.xml
examples/kcd/include/thekogans/kcd/: Database.h  IgnoreList.h  NotificationCenter.h  Options.h  Root.h  Roots.h  Version.h
examples/kcd/src/: Database.cpp  IgnoreList.cpp  Options.cpp  Root.cpp  Roots.cpp  Version.cpp  main.cpp
examples/pathfinder/: thekogans_make.xml
examples/pathfinder/include/thekogans/pathfinder/: Database.h  IgnoreList.h  Options.h  Root.h  Roots.h  Version.h
examples/pathfinder/src/: Database.cpp  IgnoreList.cpp  Options.cpp  Root.cpp  Roots.cpp  Version.cpp  main.cpp
examples/printtree/: thekogans_make.xml
examples/printtree/src/: main.cpp
examples/systeminfo/: thekogans_make.xml
examples/systeminfo/src/: main.cpp
include/thekogans/util/: AbstractOwnerList.h  AbstractOwnerVector.h  AlignedAllocator.h  Allocator.h  Array.h  BTree.h  BTree2.h  BTreeFileAllocator.h  BTreeKeys.h  BTreeTransactedFileAllocator.h  BTreeTransactedFileAllocatorBTree.h  BTreeValues.h  Barrier.h  Base64.h  BitSet.h  BlockAllocator.h  Buffer.h  BufferedFile.h  BufferedFileTransactionParticipant.h  ByteSwap.h  CPU.h  CPUInfo.h  CRC32.h  ChildProcess.h  CommandLineOptions.h  Condition.h  Config.h  Console.h  ConsoleLogger.h  Constants.h  Database.h  DefaultAllocator.h  DefaultRunLoop.h  Directory.h  DynamicCreatable.h  DynamicLibrary.h  Environment.h  Event.h  Exception.h  File.h  (+120 more)
include/thekogans/util/os/: RunLoop.h
include/thekogans/util/os/linux/: LinuxUtils.h  XlibUtils.h
include/thekogans/util/os/osx/: NSLogLogger.h  OSXUtils.h
include/thekogans/util/os/windows/: HGLOBALAllocator.h  HeapAllocator.h  OutputDebugStringLogger.h  WindowsFirewall.h  WindowsHeader.h  WindowsUtils.h
resources/: mime_types.txt
src/: AlignedAllocator.cpp  Allocator.cpp  BTree.cpp  BTree2.cpp  BTreeKeys.cpp  BTreeTransactedFileAllocator.cpp  BTreeTransactedFileAllocatorBTree.cpp  BTreeValues.cpp  Barrier.cpp  Base64.cpp  BitSet.cpp  BlockAllocator.cpp  Buffer.cpp  BufferedFile.cpp  BufferedFileTransactionParticipant.cpp  CPU.cpp  CPUInfo.cpp  CRC32.cpp  ChildProcess.cpp  CommandLineOptions.cpp  Condition.cpp  Config.cpp  Console.cpp  ConsoleLogger.cpp  Database.cpp  DefaultAllocator.cpp  DefaultRunLoop.cpp  Directory.cpp  DynamicCreatable.cpp  DynamicLibrary.cpp  Event.cpp  Exception.cpp  File.cpp  FileAllocator.cpp  FileAllocatorBTree.cpp  FileAllocatorObject.cpp  FileAllocatorRegistry.cpp  FileBlockAllocator.cpp  FileLogger.cpp  FileSystem.cpp  (+96 more)
src/os/linux/: XlibUtils.cpp
src/os/osx/: NSLogLogger.cpp  OSXUtils.mm
src/os/windows/: HGLOBALAllocator.cpp  HeapAllocator.cpp  OutputDebugStringLogger.cpp  WindowsFirewall.cpp  WindowsUtils.cpp
tests/: test_RefCounted.cpp  test_SpinLock.cpp  test_Version.cpp
